# education-advisor-tauri

./: .editorconfig  .env.example  .gitattributes  .gitignore  BACKLOG.md  BUG_REPORT.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_TO_AI.md  Dockerfile  LICENSE  MCP_INTEGRATION_PLAN.md  MIGRATION_REPORT.md  PROBLEMS.md  PROJECT_INTRO.md  README.md  ROADMAP.md  SECURITY.md  SETTINGS_V2_REPORT.md  SETTINGS_V3_REPORT.md  SETTINGS_V4_FINAL_REPORT.md  SWARM_ARCHITECTURE.md  TESTING.md  VERSION_HISTORY.md  WIKI.md  ZERO_BUG_ACCEPTANCE_REPORT.md  biome.json  docker-compose.yml  install.nu  install.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  uninstall.nu  uninstall.sh  vite.config.main.ts  vite.config.renderer.ts  (+2 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
benchmark/: auto_test_10rounds.sh  auto_test_10rounds_v2.sh  benchmark_10rounds.sh
config/: SMALL_MODEL_RULES.md  agents.yaml  default-settings.json  mcp.yaml  reason-codes.json
core/eaa-cli/: Cargo.toml
core/eaa-cli/crates/agent-isolation/: Cargo.toml
core/eaa-cli/crates/agent-isolation/src/: lib.rs
core/eaa-cli/crates/callback-signature/: Cargo.toml
core/eaa-cli/crates/callback-signature/src/: lib.rs
core/eaa-cli/crates/data-validation/: Cargo.toml
core/eaa-cli/crates/data-validation/src/: lib.rs
core/eaa-cli/crates/log-redact/: Cargo.toml
core/eaa-cli/crates/log-redact/src/: lib.rs
core/eaa-cli/deploy/: eaa_wrapper.sh
core/eaa-cli/schema/: reason_codes.json
core/eaa-cli/scripts/: eaa_extended.py  migrate.py  migrate_to_pg.py
core/eaa-cli/src/: commands.rs  main.rs  storage.rs  types.rs  validation.rs
core/eaa-cli/src/privacy/: mod.rs
core/eaa-cli/tests/: cli_tests.rs
deploy/: eaa-openclaw.service
docs/: AGENT_AUTHORING.md  ARCHITECTURE.md  CODE_WIKI.md  CONFIGURATION.md  CRON.md  DESKTOP_BUILD.md  DEVELOPMENT.md  DISTRIBUTION.md  EAA_BRIDGE.md  FAQ.md  PRIVACY_ENGINE.md  QUICK_START.md  SOP.md  TEST_COVERAGE_REPORT.md  TROUBLESHOOTING.md  audit-2026-07-18-sidecar-reliability.md
memory/: 2026-07-04.md
scripts/: analyze-links.mjs  analyze_links.py  bench-revert.mjs  build-eaa.mjs  build-icon.mjs  cdp-academic-exam-deep.mjs  cdp-academics-full-subjects.mjs  cdp-academics-link-test.mjs  cdp-academics-stress.mjs  cdp-academics-test.mjs  cdp-agent-deep.mjs  cdp-agent-execution-deep.mjs  cdp-agent-skills-settings-deep.mjs  cdp-agent-soul-validation-deep.mjs  cdp-ai-agent-capability-matrix-deep.mjs  cdp-ai-agent-data-access.mjs  cdp-ai-agent-tool-execution-deep.mjs  cdp-ai-agent-tool-path-deep.mjs  cdp-ai-chat-deep.mjs  cdp-ai-concurrent-stress-deep.mjs  cdp-ai-cross-module-dataflow-deep.mjs  cdp-ai-data-access-deep.mjs  cdp-ai-data-access-edge-deep.mjs  cdp-ai-data-access-matrix-deep.mjs  cdp-ai-data-consistency-cross-module-deep.mjs  cdp-ai-data-integrity-cross-deep.mjs  cdp-ai-data-isolation-deep.mjs  cdp-ai-entry-test.mjs  cdp-ai-error-recovery-deep.mjs  cdp-ai-export-file-privacy-deep.mjs  cdp-ai-extreme-boundary-security-deep.mjs  cdp-ai-file-tools-academic-deep.mjs  cdp-ai-large-data-perf-deep.mjs  cdp-ai-lifecycle-deep.mjs  cdp-ai-multi-agent-collaboration-deep.mjs  cdp-ai-real-workflow-deep.mjs  cdp-ai-remaining-paths-deep.mjs  cdp-ai-schema-boundary-deep.mjs  cdp-ai-soul-academic-write-deep.mjs  cdp-ai-time-trend-deep.mjs  (+139 more)
sidecar/: edu-sidecar.mjs  harness.mjs  run-all-tests.mjs  test-agent-skill-cron.mjs  test-agent-storage-angle.mjs  test-all-channels-v2.mjs  test-all-channels.mjs  test-boundary-encoding.mjs  test-boundary.mjs  test-cache-behavior.mjs  test-cache-ttl.mjs  test-chaos.mjs  test-class-lifecycle.mjs  test-comprehensive-v2.mjs  test-concurrent-angle.mjs  test-concurrent.mjs  test-consistency-angle.mjs  test-crash.mjs  test-data-consistency.mjs  test-data-integrity.mjs  (+43 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh
src-tauri/src/: main.rs  sidecar.rs  sys_bridge.rs
(+247 files in other folders)
