[package]
name = "education-advisor-tauri"
version = "0.1.0"
description = "Education Advisor — Tauri desktop edition (migrated from Electron)"
authors = ["Education Advisor AI Contributors"]
license = "MIT"
repository = ""
default-run = "education-advisor-tauri"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Single Mutex for app instance enforcement
tauri-plugin-single-instance = "2"

[features]
# By default Tauri enables a custom protocol. Production builds use it to
# load the bundled frontend.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
