[workspace]
members = [
    ".",
    "crates/log-redact",
    "crates/agent-isolation",
    "crates/data-validation",
    "crates/callback-signature",
]
resolver = "2"

[package]
name = "eaa"
version = "3.2.3"
edition = "2021"
description = "EAA - Event-Sourced Conduct Score System for Education Advisor AI"
license = "MIT"
repository = "https://github.com/232252/education-advisor"

[features]
default = ["filesystem"]
filesystem = []
postgres = ["sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
sha2 = "0.10"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "std"] }
aho-corasick = "1.1"
once_cell = "1.19"

# Local crates
log-redact = { path = "crates/log-redact" }
agent-isolation = { path = "crates/agent-isolation" }
data-validation = { path = "crates/data-validation" }
callback-signature = { path = "crates/callback-signature" }

# PostgreSQL backend (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "eaa"
path = "src/main.rs"
