[package]
name = "callback-signature"
version = "0.1.0"
edition = "2021"
description = "PR-F01: Feishu Callback Signature Verification"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["sync", "time", "macros"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"

# 日志
log = "0.4"

# 缓存（用于 nonce 5分钟 TTL）
ttl_cache = "0.5"

# 加密/摘要（用于 HMAC-SHA256）
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# 测试
tokio-test = "0.4"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
