[package]
name = "data-validation"
version = "0.1.0"
edition = "2021"
description = "Data flow validation module with eaa-cli gate integration"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
log = "0.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
