[package]
name = "log-redact"
version = "0.1.0"
edition = "2021"
description = "Sensitive information redaction for log output"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
